--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "name": "bounty-board",
-  "version": "0.0.0",
+  "version": "0.0.1-ea",
+	"description": "Custom Bounty Board App",
+	"license": "ISC",
+	"author": "GiftedR",
+	"type": "commonjs",
+	"main": "main.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "electron": "ng build && electron .",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -26,6 +32,7 @@
     "@angular/cli": "^19.2.4",
     "@angular/compiler-cli": "^19.2.0",
     "@types/jasmine": "~5.1.0",
+    "electron": "^35.0.3",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
